--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "homepage": "https://shamimrana2006.github.io/react-for-github",
-  "name": "react-for-github",
+  "name": "f",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-     "predeploy": "npm run build",
-  "deploy": "gh-pages -d dist",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
